fix collapsable

--- a/homePage.css
+++ b/homePage.css
@@ -6,7 +6,7 @@
   }
 .banner{
     width: 100%;
-    height: 100vh;
+    height: 20vh;
     background-image: url(images/whitelines.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -22,7 +22,7 @@
     justify-content: space-between;
   }
 .logo{
-    width: 8%;
+    width: 8vw;
     cursor: pointer;
     margin-left: 0%;
 }
